--- a/HTMLTutorial/classAttribute.html
+++ b/HTMLTutorial/classAttribute.html
@@ -30,7 +30,7 @@
     <br>
     <h2 class="city">Paris</h2>
     <p class="city">Paris is the capital of France</p>
-
+    TODO: This is my Todo list
 
     <script src="/script/city.js"></script>
 </body>
