Added KL as Malaysia

--- a/HTMLTutorial/classAttribute.html
+++ b/HTMLTutorial/classAttribute.html
@@ -30,6 +30,7 @@
     <br>
     <h2 class="city">Paris</h2>
     <p class="city">Paris is the capital of France</p>
+    <p class="city">Kuala Lumpur is the capital of Malaysia</p>
     TODO: This is my Todo list
 
     <script src="/script/city.js"></script>
